@@ -4,7 +4,7 @@ description: Obtenga información sobre cómo realizar una actualización in sit
 topic-tags: upgrading
 feature: Upgrading
 exl-id: aef6ef00-993c-4252-b0ad-ddc4917beaf7
-source-git-commit: 64c9296554c55b539145dd59a14b2255b1750e47
+source-git-commit: 6d2b7e341dcdedf3c000b9fb0ecd21722bdf2a27
 workflow-type: tm+mt
 source-wordcount: '1256'
 ht-degree: 0%
@@ -187,7 +187,7 @@ Tenga en cuenta que iniciar AEM desde el script de inicio no iniciará la actual
 1. Modifique el comando reemplazando la ruta al jar existente ( `crx-quickstart/app/aem-quickstart*.jar` en este caso) con el nuevo jar que es un hermano del `crx-quickstart` carpeta. Con nuestro comando anterior como ejemplo, nuestro comando sería:
 
    ```shell
-   /usr/bin/java -server -Xmx1024m -XX:MaxPermSize=256M -Djava.awt.headless=true -Dsling.run.modes=author,crx3,crx3tar -jar cq-quickstart-6.5.0.jar -c crx-quickstart -p 4502 -Dsling.properties=conf/sling.properties
+   /usr/bin/java -server -Xmx1024m -Djava.awt.headless=true -Dsling.run.modes=author,crx3,crx3tar -jar cq-quickstart-6.5.0.jar -c crx-quickstart -p 4502 -Dsling.properties=conf/sling.properties
    ```
 
    Esto asegurará que se apliquen todos los parámetros de memoria adecuados, modos de ejecución personalizados y otros parámetros ambientales para la actualización. Una vez finalizada la actualización, la instancia puede iniciarse desde el script de inicio en futuras iniciaciones.
